# SwitchCraft

./: .dockerignore  .flake8  .gitignore  404.html  ADDONS.html  CI_Architecture.html  CLI_Reference.html  CLOUDSYNC.html  Debugging_API.html  Debugging_API.md  Dockerfile  EXCHANGE_SETUP.html  FEATURES.html  GPO_TROUBLESHOOTING.html  INTUNE.html  INTUNE_ERROR_FIX.html  INTUNE_SETUP.html  Intune_Configuration_Guide.html  LICENSE  MANIFEST.in  README.md  Registry.html  SAP.html  SECURITY.html  SwitchCraft.ps1  WINGET.html  building.html  docker-compose.yml  docker-entrypoint.sh  docker_setup.html  faq.html  file_version_info.txt  file_version_info_legacy.txt  hashmap.json  index.html  install.ps1  installation.html  main.py  phase2_test.txt  phase4_err.out  (+21 more)
.agent/workflows/: deploy-web.md
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: add_switch.yml  bug_report.yml  config.yml  feature_request.yml
.github/instructions/: ai-context.md
.github/scripts/: check_relevance.py  cleanup_docker_images.py  cleanup_releases.py  generate_changelog.py  generate_release_version.py  generate_winget_manifests.py  git_utils.py  release_summary.py  update_version_info.py
.github/workflows/: auto-merge.yml  build.yml  ci-orchestrator.yml  ci.yml  cleanup.yml  deploy-demo.yml  deploy-docs.yml  docs_preview.yml  docs_test.yml  lint.yml  nightly.yml  pr-assistant.yml  process_switch_issue.yml  release.yml  retract_release.yml  review-auto-merge.yml  test.yml  tests-modern.yml  weekly.yml  winget-publish.yml
PolicyDefinitions/: README.html
assets/: ADDONS.md.D-reSJy9.js  ADDONS.md.D-reSJy9.lean.js  CI_Architecture.md.8Fc007aH.js  CI_Architecture.md.8Fc007aH.lean.js  CLI_Reference.md.CeMC6AXT.js  CLI_Reference.md.CeMC6AXT.lean.js  CLOUDSYNC.md.DSEgiGA4.js  CLOUDSYNC.md.DSEgiGA4.lean.js  Debugging_API.md.cjqCU4LQ.js  Debugging_API.md.cjqCU4LQ.lean.js  EXCHANGE_SETUP.md.V_Wk1cle.js  EXCHANGE_SETUP.md.V_Wk1cle.lean.js  FEATURES.md.MoaxQaUq.js  FEATURES.md.MoaxQaUq.lean.js  GPO_TROUBLESHOOTING.md.DI5iDHpt.js  GPO_TROUBLESHOOTING.md.DI5iDHpt.lean.js  INTUNE.md.C0L8CM88.js  INTUNE.md.C0L8CM88.lean.js  INTUNE_ERROR_FIX.md.C-oWZdGF.js  INTUNE_ERROR_FIX.md.C-oWZdGF.lean.js  INTUNE_SETUP.md.DYSEY4Z-.js  INTUNE_SETUP.md.DYSEY4Z-.lean.js  Intune_Configuration_Guide.md.2VWubZDk.js  Intune_Configuration_Guide.md.2VWubZDk.lean.js  PolicyDefinitions_README.md.B0VOyzvd.js  PolicyDefinitions_README.md.B0VOyzvd.lean.js  Registry.md.BtSstw9T.js  Registry.md.BtSstw9T.lean.js  SAP.md.CtoEuSPX.js  SAP.md.CtoEuSPX.lean.js  SECURITY.md.D6dB6O1X.js  SECURITY.md.D6dB6O1X.lean.js  WINGET.md.aYub5lpb.js  WINGET.md.aYub5lpb.lean.js  app.3Xe2_2JM.js  app.4zy_uurI.js  app.BFa0ac0q.js  app.BGbPjsnA.js  app.BI3ZstID.js  app.Bflvkj0y.js  (+81 more)
assets/chunks/: @localSearchIndexroot.7fmQo68D.js  @localSearchIndexroot.BLO0DF6c.js  @localSearchIndexroot.Big4VdRa.js  @localSearchIndexroot.BnbjoxjO.js  @localSearchIndexroot.BtDdq_Cp.js  @localSearchIndexroot.C0dRY3JN.js  @localSearchIndexroot.C7TXTDWk.js  @localSearchIndexroot.C9c3QwXl.js  @localSearchIndexroot.CGzNPpZk.js  @localSearchIndexroot.Cf4mQfLv.js  @localSearchIndexroot.Cs7MLi6E.js  @localSearchIndexroot.D3OujKDo.js  (+67 more)
build_web/: requirements.txt  web_entry.py
demo/: index.html  manifest.json  web_entry.py
docs/: ADDONS.md  CI_Architecture.md  CLI_Reference.md  CLOUDSYNC.md  CNAME  Debugging_API.md  EXCHANGE_SETUP.md  FEATURES.md  GPO_TROUBLESHOOTING.md  INTUNE.md  INTUNE_ERROR_FIX.md  INTUNE_SETUP.md  IntuneConfig.md  Intune_Configuration_Guide.md  Registry.md  SAP.md  SECURITY.md  WINGET.md  building.md  docker_setup.md  faq.md  index.md  installation.md  package-lock.json  package.json  pwa_installation.md  setup_cloudsync.md  upgrade.md  versioning.md
hooks/: hook-switchcraft.py
scripts/: build_release.ps1  build_release.sh  build_web.ps1  build_web_demo.py  check_i18n.py  generate_icons.py  generate_splash.py  post_publish_fix.ps1  prepare_web_dist.py  process_issue_ops.py  test_apis.py  validate_i18n.py  verify_fixes.py
src/: entry.py  generate_addons.py
tests/: conftest.py  manual_test_exchange.py  reproduce_addon_issue.py  test_addons.py  test_ai_service_logic.py  test_all_buttons.py  test_all_three_issues.py  test_all_views.py  test_analyzers.py  test_app_startup_critical.py  test_breakfix_regressions.py  test_build_config.py  test_button_functionality.py  test_cli_core.py  test_cli_dynamic.py  test_config.py  test_config_secure.py  test_crash_view.py  test_critical_ui_fixes.py  test_critical_ui_flows.py  test_debug_parent.py  test_e2e_exchange.py  test_e2e_packaging.py  test_e2e_winget.py  test_full_coverage.py  test_github_login.py  test_github_login_integration.py  test_github_login_real.py  test_group_manager_interactions.py  test_gui_state_machine.py  test_gui_views.py  test_i18n_integrity.py  test_intune_service_core.py  test_intune_store_search.py  test_intune_tool_download.py  test_language_change.py  test_legacy_startup_critical.py  test_library_interactions.py  test_loading_screen.py  test_modern_gui.py  (+30 more)
views/: analyzer.html  dashboard.html  exchange.html  groups.html  help.html  helper.html  history.html  home.html  intune.html  intune_store.html  library.html  macos.html  policies.html  sap_wizard.html  scripts.html  settings.html  stacks.html  tester.html  winget.html  winget_create.html  wizard.html
(+7257 files in other folders)
