[build-system]
requires = ["setuptools>=80.10.1"]
build-backend = "setuptools.build_meta"

[project]
name = "switchcraft"
version = "2026.1.5b1"
description = "A comprehensive enterprise IT platform for software packaging, analysis, and Intune management."
readme = "README.md"
authors = [{ name = "FaserF" }]
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["installer", "silent-install", "automation", "winget", "msi", "exe"]
dependencies = [
    "pefile",
    "olefile",
    "requests",
    "click",
    "rich",
    "PyYAML",
    "openai",
    "google-generativeai",
    "defusedxml",
    "PyJWT",
    "anyio>=4.12.1",
    "urllib3>=2.6.3,<3",
    "packaging"
]
requires-python = ">=3.12"

[project.optional-dependencies]
gui = [
    "customtkinter",
    "tkinterdnd2",
    "pillow",
    "plyer"
]
modern = ["flet==0.80.4", "flet-desktop==0.80.4", "flet-charts==0.80.4"]
test = [
    "pytest==9.0.2",
    "flet-charts==0.80.4",
    "httpx<=0.27.0"
]
build = [
    "pyinstaller==6.18.0"
]
desktop = [
    "winotify",
    "py7zr",
    "keyring"
]

web-server = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "jinja2",
    "itsdangerous",
    "bcrypt<=4.0.1",
    "passlib[bcrypt]",
    "pyotp", # Verified for Python 3.14
    "webauthn"
]

[project.scripts]
switchcraft = "switchcraft.main:main"

[project.urls]
Homepage = "https://github.com/FaserF/SwitchCraft"

[tool.setuptools.package-data]
switchcraft = ["assets/**/*", "assets/lang/*.json"]
switchcraft_winget = ["utils/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--ignore=test_out.txt --ignore=test_output.txt --ignore=test_addons_result.txt -W ignore::ResourceWarning"

# Flet Web Publishing Configuration
[tool.flet.app]
path = "."
module = "main.py"
